1999-01-03  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* write_t42.c (write_t42): generate Encoding array.

	* write_afm.c (write_afm): derive EncodingScheme from encoding
	argument.

	* main.c (main): handle --encoding option.

	* t42.h (struct encoding) new struct.
	* t42.h (struct rev_enc) moved from write_afm.h, renamed from
	struct code.
	* encodings.c: new file; replaces enc_standard.c
	* write_afm.c (make_revenc): renamed from make_code, changed to
	use struct encoding.
	(make_glyph): changed to use struct encoding.
	(write_afm): new argument encoding, changed callers.
	* write_t42.c: new argument encoding, changed callers.
	
1999-01-02  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* main.c (main): close output files.

	* get_name.c (get_name): return string when found (pid == Macintosh).

	* t42.h, main.c (main): new options --name and --fontmap.

1998-12-24  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* t42.h, configure.in: check for <libgen.h> and include if found
	(and we have basename).

	* configure.in: new option --with-freetype, to specify either
	installation prefix or distribution directory (if FreeType library
	can't be found automatically).

1998-12-16  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* write_t42.c (write_t42): omit duplicate entries for .notdef in
	CharStrings.

1998-12-14  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* main.c, t42.h: moved conditional declaration of basename to
	t42.h, added similar declaration for strdup.

	* write_afm.c (make_glyph): return 0, not NULL.

1998-12-13  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* write_t42.c (write_sfnts): adjust font checksum in head table.

1998-12-12  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* main.c: include <unistd.h> (basename under Linux).

1998-12-10  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* write_afm.c (write_afm), open_font.c (open_font), t42.h: added
	ascender and descender.

	* write_t42.c (write_strdef): omit FontInfo entries if string is
	NULL.
